--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				 		var options = Array.prototype.slice.call(arguments, 0);
 				 		var database = options.shift();//Removed the first thre elements which is database that is being called
 				 		var tableName = options.shift(); //assign table name and remove from list of options
+				 		tableName = tableName.toLowerCase();
 				 		size = options.length
 				 		
 
@@ -61,6 +62,7 @@
 					var values = Array.prototype.slice.call(arguments, 0);
 					var database = values.shift();
 					var table = values.shift(); 
+					table = table.toLowerCase();
 					
 					var retrievedObject = JSON.parse(localStorage.getItem(database));
 					var loopVar = 0;
@@ -113,6 +115,15 @@
 				return retrievedObject[row]
 			}
 
+			var checkTableExists = function(database, table)
+			{
+				var retrievedObject = localStorage.getItem(database);
+				retrievedObject = JSON.parse(retrievedObject);
+
+				if(!retrievedObject[table]){return false;}
+				else{return true;}
+			}
+
 
 
 			   return {
@@ -122,6 +133,7 @@
 			    addFile: newField,
 			    getTable: returnTableToLocal,
 			    readValue: getTableValue,
+			    checkTable: checkTableExists,
 			  };
 		
 
@@ -131,6 +143,7 @@
 	 //dataBase.newTable("workouts" ,"bench", "date","weight", "reps");  //creates a table with the given rows - these currently cannot be changed
 
 	//dataBase.setValues("workouts", "shoulderPress", {date:1}, {weight: 250}, {reps:4}); // sets values in table - sent in an {attribute:value} format
+	// test = dataBase.checkTable('workouts', 'benchs');
 
 	var retrievedObject = localStorage.getItem("workouts");
 				 		retrievedObject = JSON.parse(retrievedObject);
