text change - make it easier to understand

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 			//vars that control various functionality in the app
 			//change these based on your preferences
-			database.dateName = "date"; //used as default for get by date and get today's date functions
+			database.dateName = "date"; //used as default query parameter for get by date and get today's date functions
 			database.dateFormat = "mm/dd/yyy"; //TODO create helper function to format dates using this standard
 
 			/**
