--- a/example/index.html
+++ b/example/index.html
@@ -2,9 +2,9 @@
 <h3>This File is for testing</h3>
 <script>
 
-	//dataBase.create("workouts");  //creates an object(database) with the given name
-	 //dataBase.newTable("workouts" ,"deads", "date","weight", "reps");  //creates a table with the given rows - these currently cannot be changed
-
+	// dataBase.create("workouts");  //creates an object(database) with the given name
+	//  dataBase.newTable("workouts" ,"deads", "date","weight", "reps");  //creates a table with the given rows - these currently cannot be changed
+	//  dataBase.newTable("workouts" ,"bench", "date","weight", "reps");
 	//dataBase.setValues("workouts", "deads", {date:"10/20/2015"}, {weight: 300}, {reps:5});
 	//  test = dataBase.checkTable('workouts', 'benchs');
 
@@ -17,15 +17,24 @@
 	//  dataBase.setValues('workouts', 'deads', [["date", "11/12/2016"], ["weight","350"], ["reps","10"]]);
 	//  dataBase.setValues('workouts', 'deads', [["date", "1/4/2016"], ["weight","400"], ["reps","10"]]);
 	//  dataBase.setValues('workouts', 'deads', [["date", "1/4/2016"], ["weight","400"], ["reps","10"]]);
+	//  dataBase.setValues('workouts', 'bench', [["date", "11/12/2016"], ["weight","350"], ["reps","10"]]);
+	// dataBase.setValues('workouts', 'bench', [["date", "11/12/2016"], ["weight","350"], ["reps","10"]]);
+	// dataBase.setValues('workouts', 'bench', [["date", "11/12/2016"], ["weight","350"], ["reps","10"]]);
+	// dataBase.setValues('workouts', 'bench', [["date", "11/12/2016"], ["weight","350"], ["reps","10"]]);
+	// dataBase.setValues('workouts', 'bench', [["date", "1/4/2016"], ["weight","400"], ["reps","10"]]);
+	// dataBase.setValues('workouts', 'bench', [["date", "1/4/2016"], ["weight","400"], ["reps","10"]]);
+	// dataBase.setValues('workouts', 'deads', [["date", "1/10/2017"], ["weight","351"], ["reps","11"]]);
 		// var item = dataBase.test('workouts', 'deads');
 	// var item = dataBase.getTable('workouts', 'deads');
 	// console.log(item);
 	// dataBase.newRow('workouts', 'deads', 'reps');
-	var item = dataBase.select('workouts', 'deads', "weight", 400);
+	 var item = dataBase.select('workouts', 'deads', "weight", 400);
 	var retrievedObject = localStorage.getItem("workouts");
 						retrievedObject = JSON.parse(retrievedObject);
 				 		console.log(retrievedObject);
-	console.log(item);
+	// console.log(item);
+	var dates = dataBase.getToday('workouts');
+	console.log(dates);
 
 
 
